--- a/src/main/resources/templates/samples/show.html
+++ b/src/main/resources/templates/samples/show.html
@@ -95,19 +95,18 @@
                   role="form"
                   th:object="${alias}">
 
+                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     <h4 class="modal-title">Add Alias</h4>
                 </div>
                 <div class="modal-body">
-
-
                     <div class="form-group">
                         <label for="aliasName">Alias</label>
                         <input type="text" class="form-control" th:field="*{name}" id="aliasName"
                                placeholder="Identifier for a sample"/>
                     </div>
-
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -128,6 +127,8 @@
             <form th:action="@{/samples/update/{barcode}/add-tag(barcode = ${sample.barcode})}" th:method="PUT"
                   role="form" th:object="${tag}">
 
+                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     <h4 class="modal-title">Add Tag</h4>
@@ -144,9 +145,7 @@
                     <div class="form-group">
                         <label for="tagValue">Value</label>
 
-                        <div id="value-wrapper">
-
-                        </div>
+                        <div id="value-wrapper"></div>
                     </div>
 
                 </div>
