--- a/src/main/resources/templates/groups/show.html
+++ b/src/main/resources/templates/groups/show.html
@@ -91,6 +91,8 @@
         <form th:action="@{/groups/update/{id}/add-subgroup(id = ${group.id})}" th:method="PUT" th:object="${subgroup}"
               role="form">
 
+            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
