--- a/src/main/resources/templates/orders/index.html
+++ b/src/main/resources/templates/orders/index.html
@@ -60,7 +60,7 @@
             {{ samples.length }}
         </td>
         <td class="date">
-            {{ created }}
+            {{ date created }}
         </td>
     </tr>
 </script>
