--- a/src/main/resources/templates/orders/show.html
+++ b/src/main/resources/templates/orders/show.html
@@ -45,7 +45,7 @@
         <h3>Submission date: </h3>
 
         <p>
-            {{ created }}
+            {{ date created }}
         </p>
     </div>
     <div class="col-xs-12">
