--- a/src/main/resources/templates/orders/index.html
+++ b/src/main/resources/templates/orders/index.html
@@ -47,12 +47,12 @@
 <script id="order-template" type="text/x-handlebars-template">
     <tr>
         <td class="id">
-            <a href="/orders/show/{{ id }}">
-                {{ id }}
+            <a href="/orders/show/{{ identifier }}">
+                {{ identifier }}
             </a>
         </td>
         <td class="product">
-            <a href="/orders/show/{{ id }}">
+            <a href="/orders/show/{{ identifier }}">
                 {{ product.name }}
             </a>
         </td>
