--- a/src/main/resources/templates/samples/index.html
+++ b/src/main/resources/templates/samples/index.html
@@ -23,39 +23,41 @@
 
         <div class="row">
             <div class="col-md-10">
-                <table class="table table-condensed table-hover table-selectable" id="jqp-samples">
-                    <thead>
-                    <tr>
-                        <th></th>
-                        <th>
-                            Barcode
-                        </th>
-                        <th>
-                            Main Alias
-                        </th>
-                        <th>
-                            Aliases
-                        </th>
-                        <th>
-                            Type
-                        </th>
-                        <th>
-                            Status
-                        </th>
-                        <th>
-                        </th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr id="jqp-append-before-samples">
-                        <td colspan="7" class="text-center">
-                            <a href="#" class="btn btn-default" id="jqp-load-more-samples">
-                                Load More Samples...
-                            </a>
-                        </td>
-                    </tr>
-                    </tbody>
-                </table>
+                <div style="overflow-y: auto;">
+                    <table class="table table-condensed table-hover table-selectable" id="jqp-samples">
+                        <thead>
+                        <tr>
+                            <th></th>
+                            <th>
+                                Barcode
+                            </th>
+                            <th>
+                                Main Alias
+                            </th>
+                            <th>
+                                Aliases
+                            </th>
+                            <th>
+                                Type
+                            </th>
+                            <th>
+                                Status
+                            </th>
+                            <th>
+                            </th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr id="jqp-append-before-samples">
+                            <td colspan="7" class="text-center">
+                                <a href="#" class="btn btn-default" id="jqp-load-more-samples">
+                                    Load More Samples...
+                                </a>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
 
             <div class="col-md-2">
