--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -72,3 +72,17 @@ nav {
 .cursor-pointer {
     cursor: pointer;
 }
+
+.hide-select {
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+}
+
+.enable-select {
+    user-select: text;
+    -moz-user-select: text;
+    -webkit-user-select: text;
+    -ms-user-select: text;
+}
