--- a/src/main/resources/templates/labware/create.html
+++ b/src/main/resources/templates/labware/create.html
@@ -11,50 +11,51 @@
         <h1>Labware Request</h1>
     </div>
 
-    <!--<form th:action="@{/labware/store/}" th:object="${labwareRequest}" method="POST" role="form">-->
+    <form th:action="@{/labware/store/}" th:object="${labwareRequest}" method="POST" role="form">
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
 
-        <!--<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>-->
+        <div class="form-group">
+            <h3>Labware</h3>
+            <table class="table table-condensed table-hover">
+                <thead>
+                <tr>
+                    <th></th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="i : ${#numbers.sequence(0, size.columns)}">
+                    <td th:each="j : ${#numbers.sequence(0, size.rows)}"
+                        th:text="*{samples[__${(i * j) - 1}__]}"
+                        th:unless="*{samples.size() > __${i * j}__}">
 
-        <!--<div class="form-group">-->
-            <!--<h3>Labware</h3>-->
-            <!--<table class="table table-condensed table-hover">-->
-            	<!--<thead>-->
-            		<!--<tr>-->
-            			<!--<th></th>-->
-            		<!--</tr>-->
-            	<!--</thead>-->
-            	<!--<tbody>-->
-            		<!--<tr th:each="i : ${#numbers.sequence(1, '__*{columns}__')}">-->
-            			<!--<td th:each="i : *{#numbers.sequence(1, rows)}">-->
-                            <!--a-->
-                        <!--</td>-->
-            		<!--</tr>-->
-            	<!--</tbody>-->
-            <!--</table>-->
-        <!--</div>-->
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
 
         <!--<div class="alert alert-danger" th:if="${#fields.hasErrors('amount')}">-->
-            <!--<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>-->
-            <!--<strong>Validation Errors</strong>-->
-            <!--<p th:errors="*{amount}"></p>-->
+        <!--<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>-->
+        <!--<strong>Validation Errors</strong>-->
+        <!--<p th:errors="*{amount}"></p>-->
         <!--</div>-->
 
         <!--<div class="form-group">-->
-            <!--<label for="type">Of Type</label>-->
-            <!--<select id="type" class="form-control" th:field="*{type}">-->
-                <!--<option th:each="type : ${types}" th:value="${type.id}" th:text="${type.value}">-->
-                <!--</option>-->
-            <!--</select>-->
+        <!--<label for="type">Of Type</label>-->
+        <!--<select id="type" class="form-control" th:field="*{type}">-->
+        <!--<option th:each="type : ${types}" th:value="${type.id}" th:text="${type.value}">-->
+        <!--</option>-->
+        <!--</select>-->
         <!--</div>-->
 
         <!--<div class="alert alert-danger" th:if="${#fields.hasErrors('type')}">-->
-            <!--<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>-->
-            <!--<strong>Validation Errors</strong>-->
-            <!--<p th:errors="*{type}"></p>-->
+        <!--<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>-->
+        <!--<strong>Validation Errors</strong>-->
+        <!--<p th:errors="*{type}"></p>-->
         <!--</div>-->
 
-        <!--<button type="submit" class="btn btn-primary">Request</button>-->
-    <!--</form>-->
+        <button type="submit" class="btn btn-primary">Request</button>
+    </form>
 </div>
 
 <div th:replace="fragments/common :: footer"></div>
