Create Group and then add samples implemented Breaks: cannot enter a group (due to validator issues)

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -86,3 +86,14 @@ nav {
     -webkit-user-select: text;
     -ms-user-select: text;
 }
+
+.contained-overflow {
+    height: 100px;
+    overflow-y: scroll;
+    padding-right: 10px;
+    margin-bottom: 10px;
+}
+
+.page-header {
+    margin-top: 15px;
+}
