--- a/src/main/resources/templates/samples/index.html
+++ b/src/main/resources/templates/samples/index.html
@@ -7,14 +7,8 @@
 
 <div class="container">
 
-    <div class="clearfix page-header">
-        <h2 class="pull-left">Samples</h2>
-
-        <div class="pull-right">
-            <div class="btn-group">
-
-            </div>
-        </div>
+    <div class="page-header">
+        <h2>Samples</h2>
     </div>
 
     <form th:action="@{/samples/group/}" th:object="${groupRequest}" method="POST" role="form">
