--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -97,3 +97,21 @@ nav {
 .page-header {
     margin-top: 15px;
 }
+
+.sample-holder {
+    border: solid 1px lightgrey;
+    width: 100%;
+    min-height: 50px;
+    padding: 5px;
+}
+
+.sample-holder div {
+    margin: 0 5px 5px 0;
+    display: inline-block;
+}
+
+.draggable-sample-container {
+    width: 100%;
+    height: 100%;
+    display: inline-block;
+}
