Edit group: change name, parent group, children groups

--- a/src/main/resources/templates/groups/create.html
+++ b/src/main/resources/templates/groups/create.html
@@ -25,7 +25,7 @@
                     <input type="submit" class="btn btn-primary" value="Create"/>
                 </span>
             </div>
-            <div th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class=""></div>
+            <div th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></div>
         </div>
 
         <div class="samples-wrapper">
