--- a/src/main/resources/templates/groups/edit.html
+++ b/src/main/resources/templates/groups/edit.html
@@ -20,14 +20,14 @@
         <div class="row">
             <div class="col-md-10">
                 <div class="name form-group">
-                    <h3>Group Name</h3>
+                    <h4>Group Name</h4>
 
                     <label for="name" class="sr-only">Group Name</label>
                     <input type="text" th:field="*{name}" th:value="*{name}" id="name" class="form-control"/>
                 </div>
 
                 <div class="parent form-group">
-                    <h3>Parent Group</h3>
+                    <h4>Parent Group</h4>
 
                     <div th:object="${group.parent}">
                         <label for="parentGroup">Choose group</label>
@@ -41,10 +41,19 @@
                     </div>
                 </div>
 
-                <div class="children" th:if="*{children != null}">
-                    <h3>Sub Groups</h3>
+                <div class="children">
+                    <h4>Sub Groups</h4>
 
-                    <table class="table table-condensed">
+                    <div th:object="${group.children}" th:if="*{children == null}">
+                        <!--<label for="subGroup">Choose group</label>-->
+                        <!--<select th:field="${id}" id="subGroup" class="form-control">-->
+                            <!--<option th:each="group : ${groups}"-->
+                                    <!--th:value="${group.id}"-->
+                                    <!--th:text="${group.name}"></option>-->
+                        <!--</select>-->
+                    </div>
+
+                    <table class="table table-condensed" th:if="*{children != null}">
                         <thead>
                         <tr>
                             <th><span class="glyphicon glyphicon-remove"></span></th>
@@ -83,12 +92,12 @@
 
         <div class="col-md-12">
             <div class="samples row">
-                <h3>Samples</h3>
+                <h4>Samples</h4>
 
                 <div th:if="*{!samples.isEmpty()}">
-                    <h4 class="text-muted">
+                    <h5 class="text-muted">
                         Samples from: <span th:text="*{name}"></span>
-                    </h4>
+                    </h5>
 
                     <div th:include="samples/table :: table (*{'append-' + id}, *{'load-' + id}, *{'meta-' + id}, ${true})"></div>
                 </div>
