Regular text input fields are now handled as expected when ordering work

--- a/src/main/resources/templates/work/index.html
+++ b/src/main/resources/templates/work/index.html
@@ -98,7 +98,7 @@
             {{/each}}
         </select>
         {{ else }}
-        <input type="text" name="options" value="" data-index="{{ index }}" class="form-control"/>
+        <input type="text" name="options" value="" data-index="{{ index }}" class="form-control" data-name="{{ name }}"/>
         {{/if}}
     </div>
 </script>
