--- a/src/main/resources/templates/orders/index.html
+++ b/src/main/resources/templates/orders/index.html
@@ -14,6 +14,12 @@
     </div>
 
     <div class="row">
+        <div class="col-xs-offset-10 col-xs-2">
+            <a class="btn btn-primary btn-block" th:href="@{/work/}">Order Work</a>
+        </div>
+    </div>
+
+    <div class="row">
         <div class="col-md-12">
 
             <table class="table table-hover">
