Refactoring General code improvements (more use of Java 8) Removed barcode column from Sample - now generated dynamically using the ID Smarter way of setting the main alias for a Sample Better handling of Sample owner Clean up of unused methods in repositories Simplified method names Added cancel edit group button

--- a/src/main/resources/templates/groups/edit.html
+++ b/src/main/resources/templates/groups/edit.html
@@ -80,6 +80,7 @@
             <div class="col-md-2">
                 <h4>Editing</h4>
                 <button type="submit" class="btn btn-success btn-block">Update</button>
+                <a th:href="@{/groups/show/{groupId}(groupId = *{id})}" class="btn btn-default btn-block">Cancel</a>
 
                 <h4>Actions</h4>
 
