Fixes for searching samples, search groups WIP

--- a/src/main/resources/templates/samples/index.html
+++ b/src/main/resources/templates/samples/index.html
@@ -195,7 +195,7 @@
                     </a>
                 </td>
                 <td class="name">
-                    {{ mainLabel.name }}
+                    {{ mainAlias.name }}
                 </td>
                 <td class="labels">
                     {{#list aliases}}
