--- a/src/main/resources/templates/fragments/common.html
+++ b/src/main/resources/templates/fragments/common.html
@@ -64,7 +64,7 @@
                     </ul>
                 </li>
             </ul>
-            <form th:action="@{/search/samples/}" method="get" class="navbar-form navbar-right" role="form">
+            <form th:action="@{/search/}" method="get" class="navbar-form navbar-right" role="form">
 
                 <div class="form-group">
                     <label class="sr-only" for="search-samples">Search Samples</label>
@@ -74,7 +74,7 @@
                                class="form-control"
                                name="search"
                                id="search-samples"
-                               placeholder="Search Samples"
+                               placeholder="Search Samples, Groups..."
                                th:value="${param.search != null ? param.search[0] : ''}" />
 
                         <span class="input-group-btn">
