--- a/src/main/resources/templates/fragments/common.html
+++ b/src/main/resources/templates/fragments/common.html
@@ -89,6 +89,13 @@
         </div>
 
     </nav>
+    
+    <div class="alert alert-info" th:if="${status != null}">
+    	<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+    	<strong th:text="${status.status}"></strong>
+        <p th:text="${status.message}"></p>
+    </div>
+    
 </div>
 
 <div class="container" th:fragment="footer">
