--- a/src/main/resources/templates/work/index.html
+++ b/src/main/resources/templates/work/index.html
@@ -6,7 +6,26 @@
 <div th:replace="fragments/common :: header">...</div>
 
 <div class="container">
-
+    
+    <table class="table table-striped table-hover">
+    	<thead>
+    		<tr>
+    			<th>asd</th>
+    		</tr>
+    	</thead>
+    	<tbody>
+    		<tr>
+    			<td>asd</td>
+    		</tr>    		<tr>
+    			<td>asd</td>
+    		</tr>    		<tr>
+    			<td>asd</td>
+    		</tr>    		<tr>
+    			<td>asd</td>
+    		</tr>
+    	</tbody>
+    </table>
+    
     <form th:action="@{/work/order}" method="POST" id="order-form">
 
         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
@@ -25,6 +44,12 @@
 
             <div class="hidden">
                 <div class="col-md-10">
+
+                    <div class="form-group">
+                        <label for="">Text:</label>
+                        <textarea name="" id="" class="form-control"></textarea>
+                    </div>
+
                     <div class="form-group">
                         <label for="products" class="h3">
                             Choose product
@@ -71,9 +96,7 @@
             </div>
 
         </div>
-
     </form>
-
 </div>
 
 <script id="select-template" type="text/x-handlebars-template">
@@ -98,7 +121,8 @@
             {{/each}}
         </select>
         {{ else }}
-        <input type="text" name="options" value="" data-index="{{ index }}" class="form-control" data-name="{{ name }}"/>
+        <input type="text" name="options" value="" data-index="{{ index }}" class="form-control"
+               data-name="{{ name }}"/>
         {{/if}}
     </div>
 </script>
